force-app/zurich-base/main/default/objects/RelatedAccount__c/RelatedAccount__c.object-meta.xml
<CustomObject>
    <label>Related Account</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Related Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>