force-app/zurich-base/main/default/objects/RelatedAccount__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>