force-app/zurich-base/main/default/objects/RelatedAccount__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <referenceTo>CustomerWarning__c</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>RelatedAccounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>