force-app/zurich-base/main/default/objects/RelatedAccount__c/fields/WarningIdentifier__c.field-meta.xml
<CustomField>
    <fullName>WarningIdentifier__c</fullName>
    <label>Warning Identifier</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>